--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="170dp"
+    android:layout_height="180dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/list"
     android:padding="20dp"
@@ -26,7 +26,8 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/julius_sans_one"
         android:text="@string/constraint"
-        android:textSize="26sp"
+        android:textSize="24sp"              
+        app:layout_constraintTop_toBottomOf="@+id/joke"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent">
